TestSuite/errors/err0225.pas
begin
  Print(f(1)) 
end.